# food_truck_finder

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
_scripts/: init.sh
api/: helpers.py  serializers.py  urls.py  views.py
core/: admin.py  models.py  urls.py
core/management/commands/: populate_database.py
core/migrations/: 0001_initial.py  0002_foodtruck_point_location.py
food_truck_finder/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
